[gd_scene load_steps=2 format=3 uid="uid://duk77k124j2rb"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_nuycg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_nuycg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -29.0
offset_right = 82.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/BoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Awesome Platformer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartB" type="Button" parent="CanvasLayer/BoxContainer/GridContainer"]
layout_mode = 2
text = "Start"

[node name="InstructionsB" type="Button" parent="CanvasLayer/BoxContainer/GridContainer"]
layout_mode = 2
text = "Instructions"

[node name="CreditsB" type="Button" parent="CanvasLayer/BoxContainer/GridContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="CanvasLayer/BoxContainer/GridContainer/StartB" to="." method="_on_start_b_pressed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/GridContainer/InstructionsB" to="." method="_on_instructions_b_pressed"]
[connection signal="pressed" from="CanvasLayer/BoxContainer/GridContainer/CreditsB" to="." method="_on_credits_b_pressed"]
